--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         .calendar-box.type-holiday { border-left-color: #34d399; }
         .calendar-box.type-workday { border-left-color: #fbbf24; }
 
-        /* --- PRO MŰSZAK INFO STYLE (MÓDOSÍTVA A KÉRÉS ALAPJÁN) --- */
+        /* --- PRO MŰSZAK INFO STYLE (JAVÍTVA: EREDETI HALVÁNY HÁTTÉR) --- */
         .shift-info-box {
             margin-top: 15px;
             background: rgba(15, 23, 42, 0.6);
@@ -130,10 +130,11 @@
             animation: fadeIn 0.5s ease;
         }
         .shift-header-row {
-            /* Kérésre: olyan kék színű, mint a "Felhasználó" szöveg */
-            background: linear-gradient(135deg, #60a5fa 0%, #3b82f6 100%); 
+            /* VISSZAÁLLÍTVA AZ EREDETI HALVÁNYRA */
+            background: rgba(59, 130, 246, 0.1);
+            border-bottom: 1px solid rgba(59, 130, 246, 0.1);
             padding: 8px 12px;
-            color: white; /* Fehér betű */
+            color: #60a5fa; /* A fejléc szöveg színe visszakerül kékre, hogy olvasható legyen a sötéten */
             font-size: 0.65rem; font-weight: 800;
             text-transform: uppercase; letter-spacing: 1.2px;
             display: flex; align-items: center; gap: 6px;
