--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 
     <div class="ticker-wrap">
         <div class="ticker-move">
-            <div class="ticker-item">📢 FORVIA SMT APPLIKÁCIÓ INFORMÁCIÓK:🚧-Folyamatos fejlesztés alatt-🔧</div>
+            <div class="ticker-item">🚧 Folyamatos fejlesztés alatt...🔧</div>
         </div>
     </div>
 </div>
