--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
         </p>
 
         <div class="device-info">
-            Forvia SMT-HUB v2.9.2
+            Forvia SMT 2026
             <span class="good-luck">Jó munkát!</span>
         </div>
     </div>
