--- a/index.html
+++ b/index.html
@@ -36,12 +36,17 @@
             background: #0f172a;
         }
 
+        /* --- MÓDOSÍTÁS KEZDETE: Görgethetőség beállítása laptopra --- */
         #home-screen {
             flex-grow: 1; display: flex; flex-direction: column;
-            align-items: center; justify-content: center; text-align: center;
+            align-items: center; 
+            /* justify-content: center; KIVÉVE, hogy ne vágja le a tetejét kis képernyőn */
+            text-align: center;
             background: radial-gradient(circle at top right, rgba(59, 130, 246, 0.08), transparent 45%),
             radial-gradient(circle at bottom left, rgba(16, 185, 129, 0.05), transparent 45%), #0b1120;
             padding: 20px; position: relative; width: 100%; height: 100%;
+            overflow-y: auto; /* Görgetés engedélyezése */
+            padding-bottom: 60px; /* Hely a tickernek */
         }
 
         .glass-card {
@@ -53,7 +58,9 @@
             box-shadow: 0 25px 60px -12px rgba(0, 0, 0, 0.6);
             max-width: 500px; width: 100%; animation: fadeIn 0.8s ease-out;
             position: relative; 
+            margin: auto; /* Ez biztosítja a középre igazítást ÉS a biztonságos görgetést */
         }
+        /* --- MÓDOSÍTÁS VÉGE --- */
 
         .share-card-btn {
             position: absolute; top: 20px; right: 20px;
