--- a/7.html
+++ b/7.html
@@ -216,7 +216,7 @@ td { padding: 8px 12px; border-bottom: 1px solid rgba(255,255,255,0.05); vertica
     <header>
         <div class="brand">
             <h1>Forvia <span>SMT Analytics</span></h1>
-            <div class="subtitle">Production Quality & Attrition Dashboard bs Fajcsik Valér 2026</div>
+            <div class="subtitle">Production Quality & Attrition Dashboard by: Fajcsik Valér 2026</div>
         </div>
         <div class="header-actions">
             <div class="date-display">
