--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
         <div onclick="loadModule('3.html', false, this)" class="nav-item"><i>📅</i> Műszaknaptár</div>
         <div onclick="loadModule('4.html', false, this)" class="nav-item"><i>📝</i> Napi Jelentés segédlet</div>
         <div onclick="loadModule('5.html', false, this)" class="nav-item"><i>🎭</i> Maszk kereső</div>
-        <div onclick="openSecureLink(this)" class="nav-item"><i>⚙️</i>CKD/Spi Adatgeneráló 🔐</div>
+        <div onclick="openSecureLink(this)" class="nav-item"><i>⚙️</i>Adatgeneráló 🔐</div>
         <div onclick="loadModule('7.html', false, this)" class="nav-item"><i>📊</i> Hiba Analízis</div>
         <div onclick="openStaffPro(this)" class="nav-item"><i>👥</i> Szabadságok 2026 🔐</div>
         <div onclick="loadModule('9.html', false, this)" class="nav-item"><i>📷</i> Operátori Barcode Scan </div>
