--- a/9.html
+++ b/9.html
@@ -160,7 +160,7 @@ input[type=text] {
             <input type="checkbox" id="focusToggle">
             <span class="slider"></span>
         </label>
-        <span class="switch-label">iPhone 15+ Makró Mód</span>
+        <span class="switch-label">Makró Mód</span>
     </div>
 
     <div id="reader"></div>
