--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
         <div onclick="loadModule('7.html', false, this)" class="nav-item"><i>📊</i> Hiba Analízis</div>
         <div onclick="openStaffPro(this)" class="nav-item"><i>👥</i> Szabadságok 2026 🔐</div>
         <div onclick="loadModule('9.html', false, this)" class="nav-item"><i>📷</i> Operátori Barcode Scan </div>
-        <div onclick="loadModule('10.html', false, this)" class="nav-item"><i>🗑️</i> Szemétkihordás Terv</div>
+        <div onclick="loadModule('10.html', false, this)" class="nav-item"><i>🚮</i> Szemétkihordás Terv</div>
     </nav>
 
     <footer>Szoftverfejlesztő:<br><strong style="color:white">GERGŐ ROLAND</strong><br>2026</footer>
